--- a/src/app/slideshow/slideshow.component.scss
+++ b/src/app/slideshow/slideshow.component.scss
@@ -12,8 +12,6 @@
     width: 100%;
     object-fit: cover;
     object-position: 50% 50%;
-    /* animation: zoomIn 10s ease-in infinite;
-    animation-fill-mode: forwards; */
 }
 
 .animate-img {
