--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,3 @@
-/* You can add global styles to this file, and also import other style files */
-
 //Global SCSS variables
 :root {
     --navbar-height: 50px;
@@ -14,6 +12,8 @@
 
 html {
     scroll-behavior: smooth;
+  /*   max-width: 100%;
+    overflow-x: hidden; */
 }
 
 body {
@@ -22,7 +22,8 @@ body {
     color: white;
     background-color: var(--bg-color-primary);
     font-size: var(--main-font-size);
-    overflow-x: hidden;
+/*     max-width: 100%;
+    overflow-x: hidden; */
 }
 
 a {
